# EnhancingDeformationAnalysisUI

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.windows  EnhancedUIIcons.icns  LICENSE.txt  README.md  setup.py  setup_deps.ps1  setup_deps.sh  setup_pytorch.py  setup_tensorflow.py
.github/workflows/: build-image.yml  build-linux-image.yml  build-windows-image.yml  build.yml  ci.yml
assets/: Info.plist  Info.plist.in
assets/models/batch-m4-combo/: fingerprint.pb
assets/test_model/: fingerprint.pb  model_float16.tflite  model_float32.tflite  saved_model.pb
assets/test_model/variables/: variables.data-00000-of-00001  variables.index
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
scripts/: setup_tensorflow.py
src/: CMakeLists.txt  ImGuiImpl.cpp  ImGuiImpl.h  cli.cpp  cli.hpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  main.cpp  utils.cpp  utils.h
src/OpenGL/: Texture.cpp  Texture.h
src/core/: CrackDetector.cpp  CrackDetector.hpp  DeformationAnalysisInterface.cpp  DeformationAnalysisInterface.hpp  DenoiseInterface.cpp  DenoiseInterface.hpp  FeatureTracker.cpp  FeatureTracker.hpp  ImageAnalysis.cpp  ImageAnalysis.hpp  Stabilizer.cpp  Stabilizer.hpp  ThreadPool.cpp  ThreadPool.hpp  Tiler.cpp  Tiler.hpp  stabilizer.cpp  stabilizer.hpp
src/ui/: Application.cpp  Application.h  ImageSequenceViewer.cpp  ImageSequenceViewer.h  ImageSet.cpp  ImageSet.h  PreprocessingTab.cpp  PreprocessingTab.h
